# eaten-by-a-grue

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-debug.cmd  dummy.cpp  dummy.h  dungeon  main.cpp  main.cxx  makefile
SDL2-2.24.0/cmake/: sdl2-config.cmake
SDL2-2.24.0/places/: map.cxx  map.h
cmake/: FindSDL2.cmake
designDocs/: coreDesign.md
dummys/: dummy.cpp  dummy.cxx  dummy.h  dummys.h  mage.cpp  mage.cxx  mage.h  richard.cpp  richard.cxx  richard.h  rogue.cpp  rogue.cxx  rogue.h  warrior.cpp  warrior.cxx  warrior.h
mainUI/: mainUI.cxx  mainUI.h
mechanics/: attack.h  combat.cpp  combat.cxx  combat.h  dice.cpp  dice.h  mechanics.h
places/: map.cpp  map.cxx  map.h
things/: item.cxx  item.h
